Remove DIV IDs from HTML elements, part 2

--- a/files/en-us/web/html/element/input/email/index.html
+++ b/files/en-us/web/html/element/input/email/index.html
@@ -145,7 +145,7 @@ browser-compat: html.elements.input.input-email
 <p>It's important, however, to note that this is not enough to ensure that the specified text is an e-mail address which actually exists, corresponds to the user of the site, or is acceptable in any other way. It ensures that the value of the field is properly formatted to be an e-mail address.</p>
 
 <div class="note">
-<p><strong>Note</strong>: It's also crucial to remember that a user can tinker with your HTML behind the scenes, so your site <em>must not</em> use this validation for any security purposes. You <em>must</em> verify the e-mail address on the server side of any transaction in which the provided text may have any security implications of any kind.</p>
+<p><strong>Note:</strong> It's also crucial to remember that a user can tinker with your HTML behind the scenes, so your site <em>must not</em> use this validation for any security purposes. You <em>must</em> verify the e-mail address on the server side of any transaction in which the provided text may have any security implications of any kind.</p>
 </div>
 
 <h3 id="A_simple_email_input">A simple email input</h3>
@@ -169,7 +169,7 @@ browser-compat: html.elements.input.input-email
 <p>The input is now considered valid when a single e-mail address is entered, or when any number of e-mail addresses separated by commas and, optionally, some number of whitespace characters are present.</p>
 
 <div class="note">
-<p><strong>Note</strong>: When <code>multiple</code> is used, the value <em>is</em> allowed to be empty.</p>
+<p><strong>Note:</strong> When <code>multiple</code> is used, the value <em>is</em> allowed to be empty.</p>
 </div>
 
 <p>Some examples of valid strings when <code>multiple</code> is specified:</p>
@@ -225,17 +225,18 @@ browser-compat: html.elements.input.input-email
 
 <h3 id="Providing_default_options">Providing default options</h3>
 
+<h4>Providing a single default using the value attribute</h4>
+
 <p>As always, you can provide a default value for an <code>email</code> input box by setting its {{htmlattrxref("value", "input")}} attribute:</p>
 
-<div id="Default_value">
 <pre class="brush: html">&lt;input type="email" value="default@example.com"&gt;</pre>
 </div>
 
-<p>{{EmbedLiveSample("Default_value", 600, 40)}}</p>
+<p>{{EmbedLiveSample("Providing_a_single_default_using_the_value_attribute", 600, 40)}}</p>
 
 <h4 id="Offering_suggested_values">Offering suggested values</h4>
 
-<p>Taking it a step farther, you can provide a list of default options from which the user can select by specifying the {{htmlattrxref("list", "input")}} attribute. This doesn't limit the user to those options, but does allow them to select commonly-used e-mail addresses more quickly. This also offers hints to {{htmlattrxref("autocomplete", "input")}}. The <code>list</code> attribute specifies the ID of a {{HTMLElement("datalist")}}, which in turn contains one {{HTMLElement("option")}} element per suggested value; each <code>option</code>'s <code>value</code> is the corresponding suggested value for the email entry box.</p>
+<p>Taking it a step further, you can provide a list of default options from which the user can select by specifying the {{htmlattrxref("list", "input")}} attribute. This doesn't limit the user to those options, but does allow them to select commonly-used e-mail addresses more quickly. This also offers hints to {{htmlattrxref("autocomplete", "input")}}. The <code>list</code> attribute specifies the ID of a {{HTMLElement("datalist")}}, which in turn contains one {{HTMLElement("option")}} element per suggested value; each <code>option</code>'s <code>value</code> is the corresponding suggested value for the email entry box.</p>
 
 <pre class="brush: html">&lt;input type="email" size="40" list="defaultEmails"&gt;
 
@@ -256,7 +257,7 @@ browser-compat: html.elements.input.input-email
 <p>There are two levels of content validation available for <code>email</code> inputs. First, there's the standard level of validation offered to all {{HTMLElement("input")}}s, which automatically ensures that the contents meet the requirements to be a valid e-mail address. But there's also the option to add additional filtering to ensure that your own specialized needs are met, if you have any.</p>
 
 <div class="warning">
-<p><strong>Important</strong>: HTML form validation is <em>not</em> a substitute for scripts that ensure that the entered data is in the proper format.It's far too easy for someone to make adjustments to the HTML that allow them to bypass the validation, or to remove it completely. It's also possible for someone to bypass your HTML entirely and submit the data directly to your server. If your server-side code fails to validate the data it receives, disaster could strike when improperly-formatted data (or data which is too large, is of the wrong type, and so forth) is entered into your database.</p>
+<p><strong>Warning:</strong> HTML form validation is <em>not</em> a substitute for scripts that ensure that the entered data is in the proper format.It's far too easy for someone to make adjustments to the HTML that allow them to bypass the validation, or to remove it completely. It's also possible for someone to bypass your HTML entirely and submit the data directly to your server. If your server-side code fails to validate the data it receives, disaster could strike when improperly-formatted data (or data which is too large, is of the wrong type, and so forth) is entered into your database.</p>
 </div>
 
 <h3 id="Basic_validation">Basic validation</h3>
@@ -270,7 +271,7 @@ browser-compat: html.elements.input.input-email
 <p>To learn more about how form validation works and how to take advantage of the {{cssxref(":valid")}} and {{cssxref(":invalid")}} CSS properties to style the input based on whether or not the current value is valid, see <a href="/en-US/docs/Learn/Forms/Form_validation">Form data validation</a>.</p>
 
 <div class="note">
-<p><strong>Note</strong>: There are known specification issues related to international domain names and the validation of e-mail addresses in HTML. See <a href="https://www.w3.org/Bugs/Public/show_bug.cgi?id=15489">W3C bug 15489</a> for details.</p>
+<p><strong>Note:</strong> There are known specification issues related to international domain names and the validation of e-mail addresses in HTML. See <a href="https://www.w3.org/Bugs/Public/show_bug.cgi?id=15489">W3C bug 15489</a> for details.</p>
 </div>
 
 <h3 id="Pattern_validation">Pattern validation</h3>
@@ -320,7 +321,7 @@ label::after {
 &lt;/form&gt;
 </pre>
 
-<p>{{EmbedLiveSample("Pattern_validation", 700, 275)}}</p>
+<p>{{EmbedLiveSample("Pattern_validation", 700, 300)}}</p>
 
 <p>Our {{HTMLElement("form")}} contains one {{HTMLElement("input")}} of type <code>email</code> for the user's e-mail address, a {{HTMLElement("textarea")}} to enter their message for IT into, and an <code>&lt;input&gt;</code> of type <code><a href="/en-US/docs/Web/HTML/Element/input/submit">"submit"</a></code>, which creates a button to submit the form. Each text entry box has a {{HTMLElement("label")}} associated with it to let the user know what's expected of them.</p>
 
@@ -341,7 +342,7 @@ label::after {
 <p><img alt="" src="email-pattern-match-bad.png"></p>
 
 <div class="note">
-<p><strong>Note</strong>: If you run into trouble while writing your validation regular expressions and they're not working properly, check your browser's console; there may be helpful error messages there to aid you in solving the problem.</p>
+<p><strong>Note:</strong> If you run into trouble while writing your validation regular expressions and they're not working properly, check your browser's console; there may be helpful error messages there to aid you in solving the problem.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
@@ -362,7 +363,7 @@ label::after {
   &lt;option value="hulk@grrrrrrrr.arg"&gt;
 &lt;/datalist&gt;</pre>
 
-<p>{{EmbedLiveSample('Examples', 600, 50)}}</p>
+<p>{{EmbedLiveSample('Examples', 600, 80)}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
