--- a/files/en-us/web/html/element/table/index.html
+++ b/files/en-us/web/html/element/table/index.html
@@ -27,8 +27,7 @@ browser-compat: html.elements.table
   <tr>
    <th scope="row">Permitted content</th>
    <td>
-    <div class="content-models">
-    <div id="table-mdls">In this order:
+    In this order:
     <ol>
      <li>an optional {{HTMLElement("caption")}} element,</li>
      <li>zero or more {{HTMLElement("colgroup")}} elements,</li>
@@ -41,8 +40,6 @@ browser-compat: html.elements.table
      </li>
      <li>an optional {{HTMLElement("tfoot")}} element</li>
     </ol>
-    </div>
-    </div>
    </td>
   </tr>
   <tr>
