--- a/files/en-us/web/html/element/rb/index.html
+++ b/files/en-us/web/html/element/rb/index.html
@@ -58,6 +58,8 @@ browser-compat: html.elements.rb
 
 <h2 id="Examples">Examples</h2>
 
+<h3>Using rb</h3>
+
 <p>In this example, we provide an annotation for the original character equivalent of "Kanji":</p>
 
 <pre class="brush: html">&lt;ruby&gt;
@@ -67,6 +69,10 @@ browser-compat: html.elements.rb
 
 <p>Note how we've included two <code>&lt;rb&gt;</code> elements, to delimit the two separate parts of the ruby base text. The annotation on the other hand is delimited by two {{htmlelement("rt")}} elements.</p>
 
+<p>{{EmbedLiveSample("Using_rb", "100%", 60)}}</p>
+
+<h3>Separate annotations</h3>
+
 <p>Note that we could also write this example with the two base text parts annotated completely separately. In this case we don't need to include <code>&lt;rb&gt;</code> elements:</p>
 
 <pre class="brush: html">&lt;ruby&gt;
@@ -74,39 +80,7 @@ browser-compat: html.elements.rb
   字 &lt;rp&gt;(&lt;/rp&gt;&lt;rt&gt;ji&lt;/rt&gt;&lt;rp&gt;)&lt;/rp&gt;
 &lt;/ruby&gt;</pre>
 
-<div class="hidden">
-<div id="with-ruby">
-<pre class="brush: html">&lt;ruby&gt; &lt;rb&gt;漢&lt;rb&gt;字 &lt;rp&gt;(&lt;/rp&gt;&lt;rt&gt;kan&lt;rt&gt;ji&lt;rp&gt;)&lt;/rp&gt; &lt;/ruby&gt;
-</pre>
-
-<pre class="brush: css">body {
-  font-size: 22px;
-}</pre>
-</div>
-</div>
-
-<p>The output looks like so:</p>
-
-<p>{{EmbedLiveSample("with-ruby", "100%", 60)}}</p>
-
-<p>The HTML above might look something like this when rendered by a browser <em>without</em> ruby support:</p>
-
-<div id="without-ruby">
-<div class="hidden">
-<pre class="brush: html">漢字 (kan ji)</pre>
-
-<pre class="brush: css">body {
-  font-size: 22px;
-}
-</pre>
-</div>
-</div>
-
-<p>{{EmbedLiveSample("without-ruby", "100%", 60)}}</p>
-
-<div class="note">
-<p><strong>Note</strong>: See the article about the {{HTMLElement("ruby")}} element for further examples.</p>
-</div>
+<p>See the article about the {{HTMLElement("ruby")}} element for further examples.</p>
 
 <h2 id="Specifications">Specifications</h2>
 
