--- a/files/en-us/web/html/element/rp/index.html
+++ b/files/en-us/web/html/element/rp/index.html
@@ -62,41 +62,22 @@ browser-compat: html.elements.rp
 
 <h2 id="Examples">Examples</h2>
 
+<h3>Using ruby annotations</h3>
+
 <p>This example uses ruby annotations to display the {{interwiki("wikipedia", "Romaji")}} equivalents for each character.</p>
 
-<div id="with-ruby">
 <pre class="brush: html">&lt;ruby&gt;
   漢 &lt;rp&gt;(&lt;/rp&gt;&lt;rt&gt;Kan&lt;/rt&gt;&lt;rp&gt;)&lt;/rp&gt;
   字 &lt;rp&gt;(&lt;/rp&gt;&lt;rt&gt;ji&lt;/rt&gt;&lt;rp&gt;)&lt;/rp&gt;
 &lt;/ruby&gt;</pre>
 
-<div class="hidden">
-<h3 id="CSS">CSS</h3>
-
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   font-size: 22px;
 }</pre>
-</div>
-</div>
 
 <p>The result looks like this in your browser:</p>
 
-<p>{{EmbedLiveSample("with-ruby", 600, 60)}}</p>
-
-<p>The HTML above rendered by a browser <em>without</em> ruby support might look like this:</p>
-
-<div id="without-ruby">
-<div class="hidden">
-<pre class="brush: html">漢 (Kan) 字 (ji)</pre>
-
-<pre class="brush: css">body {
-  font-size: 22px;
-}
-</pre>
-</div>
-</div>
-
-<p>{{EmbedLiveSample("without-ruby", 600, 60)}}</p>
+<p>{{EmbedLiveSample("Using_ruby_annotations", 600, 60)}}</p>
 
 <p>See the article about the {{HTMLElement("ruby")}} element for further examples.</p>
 
